--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
         <li class="testimonials__item">
             <img src="static/images/logos/placeholder.png" alt="Lorem ipsum dolor sit amet">
             <blockquote>
-                <p class="icon icon_ql">In imperdiet odio metus, at ultricies tellus posuere at.</p>
-                <span class="name">Desmond Eagle,</span>
-                <span class="role"> CompanyName</span>
+                <p class="icon icon_ql">I'd employ him if he had more testimonials.</p>
+                <span class="name">Jeff Bezos,</span>
+                <span class="role"> Probably</span>
             </blockquote>
         </li>
     </ul>
