--- a/index.html
+++ b/index.html
@@ -28,7 +28,21 @@
 
 
 -->
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Ray's Portfolio -- Home</title><meta name="description" content="The home page of Ray's portfolio"><meta name="keywords" content="Homepage, Technical art, Screenshots"><link rel="shortcut icon" href="favicon.ico"><link rel="shortcut icon" href="static/images/favicons/favicon.png" type="image/x-icon"><link rel="apple-touch-icon" href="static/images/favicons/apple-touch-icon.png"><link rel="apple-touch-icon-precomposed" href="static/images/favicons/apple-touch-icon-precomposed.png"><link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,300,400,600,700,800%7COpen+Sans+Condensed:300&amp;subset=latin,cyrillic" rel="stylesheet" type="text/css"><link rel="stylesheet" href="static/css/screen.min.css"><link rel="stylesheet" href="static/css/custom.min.css"></head>
+<!DOCTYPE html><html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width,initial-scale=1">
+        <title>Ray's Portfolio -- Home</title>
+        <meta name="description" content="The home page of Ray's portfolio">
+        <meta name="keywords" content="Homepage, Technical art, Screenshots">
+        <link rel="shortcut icon" href="favicon.ico">
+        <link rel="shortcut icon" href="static/images/favicons/favicon.png" type="image/x-icon">
+        <link rel="apple-touch-icon" href="static/images/favicons/apple-touch-icon.png">
+        <link rel="apple-touch-icon-precomposed" href="static/images/favicons/apple-touch-icon-precomposed.png">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,300,400,600,700,800%7COpen+Sans+Condensed:300&amp;subset=latin,cyrillic" rel="stylesheet" type="text/css">
+        <link rel="stylesheet" href="build/static/css/screen.min.css">
+        <link rel="stylesheet" href="build/static/css/custom.min.css"></head>
 <body>
     
 <!-- Header-->
