--- a/index.html
+++ b/index.html
@@ -42,17 +42,34 @@
         <link rel="apple-touch-icon-precomposed" href="static/images/favicons/apple-touch-icon-precomposed.png">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,300,400,600,700,800%7COpen+Sans+Condensed:300&amp;subset=latin,cyrillic" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="build/static/css/screen.min.css">
-        <link rel="stylesheet" href="build/static/css/custom.min.css"></head>
+        <link rel="stylesheet" href="build/static/css/custom.min.css">
+    </head>
 <body>
     
 <!-- Header-->
     <header class="main-header"><div class="first-nav"><div class="container"><nav class="first-nav__links"><ul><li>
     <!--a class="is-selected">english</a></li><li><a href="#">français</a></li><li><a href="#">deutsch</a //-->
-        </li></ul></nav><a class="first-nav__navcontrol icon icon_menu js-navcontrol" href="#">Menu</a></div></div><div class="second-nav js-nav"><div class="container"><a class="second-nav__logo"><span>OR</span></a><nav class="menu"><ul><li><a class="js-link js-anchor is-selected" href="">Home</a></li><li><a class="js-link js-anchor" href="#about">About</a></li>
+        </li></ul>
+    </nav>
+    <a class="first-nav__navcontrol icon icon_menu js-navcontrol" href="#">Menu</a>
+    </div>
+    </div>
+    <div class="second-nav js-nav">
+        <div class="container">
+            <a class="second-nav__logo">
+                <span>OR</span>
+            </a>
+            <nav class="menu"><ul><li><a class="js-link js-anchor is-selected" href="">Home</a></li>
+                <li><a class="js-link js-anchor" href="#about">About</a></li>
         <!-- <li style="margin-left: 0px;"> --><li>
         <a class="js-link js-anchor" href="BLOG LINK :) !!!">Blog</a>
         <!--<li><a class="js-link js-anchor" href="#process">Process</a--> 
-        </li><li><a class="js-link js-anchor" href="#projects">Projects</a></li><li><a class="js-link js-anchor" href="#testimonials">Testimonials</a></li><li><a class="js-link js-anchor" href="#contacts">Contacts</a></li></ul></nav></div></div></header>
+        </li><li><a class="js-link js-anchor" href="#projects">Projects</a></li>
+        <li><a class="js-link js-anchor" href="#testimonials">Testimonials</a></li>
+        <li><a class="js-link js-anchor" href="#contacts">Contacts</a></li>
+        </ul></nav></div>
+    </div>
+    </header>
 
         <!-- Home section-->
         <section class="home-section" id="home"><div class="home-section__bg"></div>
