--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             </header>
             <div class="grid-container">
                 <ul class="testimonials">
-                    <li class="testimonials__item"><img src="static/images/logos/placeholder.png" alt="Lorem ipsum dolor sit amet">
+                    <!-- <li class="testimonials__item"><img src="static/images/logos/placeholder.png" alt="Lorem ipsum dolor sit amet"> -->
                         <blockquote>
                             <p class="icon icon_ql">The software is easy to use and does exactly what was asked.<br>
                             The art of a good product supplier is to provide additional capability that the client didn't know was available, this software does that it provides effectiveness improvements, efficiency savings, reduction of resources and is a pleasure to use.<br>
@@ -155,9 +155,10 @@
                             <span class="role"></span>
                         </blockquote>
                     </li>
-                    
+                </ul>
+                <ul> 
                     <li class="testimonials__item">
-                        <img src="static/images/logos/placeholder.png" alt="Lorem ipsum dolor sit amet">
+                        <!-- <img src="static/images/logos/placeholder.png" alt="Lorem ipsum dolor sit amet"> -->
                         <blockquote>
                             <p class="icon icon_ql">I'd employ him if he had more testimonials.</p>
                             <span class="name">Jeff Bezos,</span>
