--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,300,400,600,700,800%7COpen+Sans+Condensed:300&amp;subset=latin,cyrillic" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="build/static/css/screen.min.css">
         <link rel="stylesheet" href="build/static/css/custom.min.css">
-        
+
     </head>
 <body>
     
@@ -63,7 +63,7 @@
             <nav class="menu"><ul><li><a class="js-link js-anchor is-selected" href="">Home</a></li>
                 <li><a class="js-link js-anchor" href="#about">About</a></li>
         <!-- <li style="margin-left: 0px;"> --><li>
-        <a class="js-link js-anchor" href="BLOG LINK :) !!!">Blog</a>
+        <a class="js-link js-anchor" href="build/wip.html">Blog</a>
         <!--<li><a class="js-link js-anchor" href="#process">Process</a--> 
         </li><li><a class="js-link js-anchor" href="#projects">Projects</a></li>
         <li><a class="js-link js-anchor" href="#testimonials">Testimonials</a></li>
