--- a/index.html
+++ b/index.html
@@ -95,9 +95,11 @@
                     <p id="aboutMe"> 
                         
                     </p>
-                    <p> <blockquote>
-                    Code talk;
-                    </p> </blockquote>
+                    <p> 
+                        <blockquote>
+                            Code talk;
+                        </blockquote>
+                    </p> 
                     <p>
                         I have <span id="codeExp"> 4 </span> years of coding experiance, in lots of languages including; python, C#, C++ and YAML.
                         Of all of these my favourite to prototype in is python because of the "code to test" speed, however I do not write programs
