Added losts of webpages

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <nav class="menu"><ul><li><a class="js-link js-anchor is-selected" href="">Home</a></li>
                 <li><a class="js-link js-anchor" href="#about">About</a></li>
         <!-- <li style="margin-left: 0px;"> --><li>
-        <a class="js-link js-anchor" href="build/wip.html">Blog</a>
+        <a class="js-link js-anchor is-selected" href="build/wip.html">Blog</a>
         <!--<li><a class="js-link js-anchor" href="#process">Process</a--> 
         </li><li><a class="js-link js-anchor" href="#projects">Projects</a></li>
         <li><a class="js-link js-anchor" href="#testimonials">Testimonials</a></li>
