--- a/index.html
+++ b/index.html
@@ -130,33 +130,33 @@
     
         <div class="projects-wrap"><div class="grid-container"><div class="projects">
         <figure class="projects__item">
-            <img src="build/static/images/projects/1.jpg" alt="Lorem ipsum dolor sit amet, consectetur adipiscing elit">
+            <img src="build/static/images/projects/ggj/ggj.gif" alt="Lorem ipsum dolor sit amet, consectetur adipiscing elit">
             <figcaption>
-                <a class="icon icon_link" href="build/Gears.html">Lorem ipsum dolor sit amet, consectetur adipiscing elit</a>
+                <a class="icon icon_link" href="build/ggj.html">Lorem ipsum dolor sit amet, consectetur adipiscing elit</a>
             </figcaption>
         </figure>
         <figure class="projects__item">
-            <img src="build/static/images/projects/2.jpg" alt="Donec lobortis, est iaculis rutrum feugiat">
+            <img src="build/static/images/projects/coin/coin.gif" alt="Donec lobortis, est iaculis rutrum feugiat">
             <figcaption>
-                <a class="icon icon_link" href="#" >Donec lobortis, est iaculis rutrum feugiat</a>
+                <a class="icon icon_link" href="build/coinflip.html" >Donec lobortis, est iaculis rutrum feugiat</a>
             </figcaption>
         </figure>
         <figure class="projects__item">
-            <img src="build/static/images/projects/5.jpg" alt="Duis feugiat, metus eu ullamcorper accumsan, massa risus dictum nisi">
+            <img src="build/static/images/projects/gears/gears.gif" alt="Duis feugiat, metus eu ullamcorper accumsan, massa risus dictum nisi">
             <figcaption>
-                <a class="icon icon_link" href="#" >Duis feugiat, metus eu ullamcorper accumsan, massa risus dictum nisi</a>
+                <a class="icon icon_link" href="build/Gears.html" >Duis feugiat, metus eu ullamcorper accumsan, massa risus dictum nisi</a>
             </figcaption>
         </figure>
         <figure class="projects__item">
-            <img src="build/static/images/projects/6.jpg" alt="Donec non ligula imperdiet, tincidunt quam ut, pellentesque nisi">
+            <img src="build/static/images/projects/landscape/landscape2.gif" alt="Donec non ligula imperdiet, tincidunt quam ut, pellentesque nisi">
             <figcaption>
-                <a class="icon icon_link" href="#" >Donec non ligula imperdiet, tincidunt quam ut, pellentesque nisi</a>
+                <a class="icon icon_link" href="build/landscape.html" >Donec non ligula imperdiet, tincidunt quam ut, pellentesque nisi</a>
             </figcaption>
         </figure>
         <figure class="projects__item">
-            <img src="build/static/images/projects/3.jpg" alt="Mauris a sem semper, maximus metus vitae, efficitur turpis">
+            <img src="build/static/images/projects/rain/rain.gif" alt="Mauris a sem semper, maximus metus vitae, efficitur turpis">
             <figcaption>
-                <a class="icon icon_link" href="#" >Mauris a sem semper, maximus metus vitae, efficitur turpis</a>
+                <a class="icon icon_link" href="build/rain.html" >Mauris a sem semper, maximus metus vitae, efficitur turpis</a>
             </figcaption>
         </figure>
         <figure class="projects__item">
