Added images and links

--- a/index.html
+++ b/index.html
@@ -160,19 +160,19 @@
             </figcaption>
         </figure>
         <figure class="projects__item">
-            <img src="build/static/images/projects/4.jpg" alt="Nunc sit amet massa id sem pretium luctus">
+            <img src="build/static/images/projects/landscape/landscape2.gif" alt="Nunc sit amet massa id sem pretium luctus">
             <figcaption>
-                <a class="icon icon_link" href="#" >Nunc sit amet massa id sem pretium luctus</a>
+                <a class="icon icon_link" href="build/landscape.html" >Nunc sit amet massa id sem pretium luctus</a>
             </figcaption>
         </figure>
         <figure class="projects__item">
-            <img src="build/static/images/projects/7.jpg" alt="Nunc elementum arcu sit amet erat sodales fringilla">
+            <img src="build/static/images/projects/rain/rain1.gif" alt="Nunc elementum arcu sit amet erat sodales fringilla">
             <figcaption>
-                <a class="icon icon_link" href="#" >Nunc elementum arcu sit amet erat sodales fringilla</a>
+                <a class="icon icon_link" href="build/rain.html" >Nunc elementum arcu sit amet erat sodales fringilla</a>
             </figcaption>
         </figure>
         <figure class="projects__item">
-            <img src="build/static/images/projects/8.jpg" alt="Cras condimentum venenatis aliquet">
+            <img src="build/static/images/projects/" alt="Cras condimentum venenatis aliquet">
             <figcaption>
                 <a class="icon icon_link" href="#" >Cras condimentum venenatis aliquet</a>
             </figcaption>
