Alt text update

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <nav class="menu"><ul><li><a class="js-link js-anchor is-selected" href="">Home</a></li>
                 <li><a class="js-link js-anchor" href="#about">About</a></li>
         <!-- <li style="margin-left: 0px;"> --><li>
-        <a class="js-link js-anchor is-selected" href="build/wip.html">Blog</a>
+        <a class="js-link js-anchor is-selected" href="build/wip.html">Blog (wip)</a>
         <!--<li><a class="js-link js-anchor" href="#process">Process</a--> 
         </li><li><a class="js-link js-anchor" href="#projects">Projects</a></li>
         <li><a class="js-link js-anchor" href="#testimonials">Testimonials</a></li>
@@ -130,51 +130,51 @@
     
         <div class="projects-wrap"><div class="grid-container"><div class="projects">
         <figure class="projects__item">
-            <img src="build/static/images/projects/ggj/ggj.gif" alt="Lorem ipsum dolor sit amet, consectetur adipiscing elit">
+            <img src="build/static/images/projects/ggj/ggj.gif" alt="ggj gif">
             <figcaption>
-                <a class="icon icon_link" href="build/ggj.html">Lorem ipsum dolor sit amet, consectetur adipiscing elit</a>
+                <a class="icon icon_link" href="build/ggj.html">Global games jam </a>
             </figcaption>
         </figure>
         <figure class="projects__item">
-            <img src="build/static/images/projects/coin/coin.gif" alt="Donec lobortis, est iaculis rutrum feugiat">
+            <img src="build/static/images/projects/coin/coin.gif" alt="Coin vertex animation study">
             <figcaption>
-                <a class="icon icon_link" href="build/coinflip.html" >Donec lobortis, est iaculis rutrum feugiat</a>
+                <a class="icon icon_link" href="build/coinflip.html" > Coin vertex animation study </a>
             </figcaption>
         </figure>
         <figure class="projects__item">
-            <img src="build/static/images/projects/gears/gears.gif" alt="Duis feugiat, metus eu ullamcorper accumsan, massa risus dictum nisi">
+            <img src="build/static/images/projects/gears/gears.gif" alt="Gears vertex animation and masking study ">
             <figcaption>
-                <a class="icon icon_link" href="build/Gears.html" >Duis feugiat, metus eu ullamcorper accumsan, massa risus dictum nisi</a>
+                <a class="icon icon_link" href="build/Gears.html" >Gears vertex animation and masking study</a>
             </figcaption>
         </figure>
         <figure class="projects__item">
-            <img src="build/static/images/projects/landscape/landscape2.gif" alt="Donec non ligula imperdiet, tincidunt quam ut, pellentesque nisi">
+            <img src="build/static/images/projects/landscape/landscape2.gif" alt="Compute shader and proc gen ">
             <figcaption>
-                <a class="icon icon_link" href="build/landscape.html" >Donec non ligula imperdiet, tincidunt quam ut, pellentesque nisi</a>
+                <a class="icon icon_link" href="build/landscape.html" >Compute shader and proc gen </a>
             </figcaption>
         </figure>
         <figure class="projects__item">
-            <img src="build/static/images/projects/rain/rain.gif" alt="Mauris a sem semper, maximus metus vitae, efficitur turpis">
+            <img src="build/static/images/projects/rain/rain.gif" alt="Weather shader for proc gen landscape">
             <figcaption>
-                <a class="icon icon_link" href="build/rain.html" >Mauris a sem semper, maximus metus vitae, efficitur turpis</a>
+                <a class="icon icon_link" href="build/rain.html" >Weather shader for proc gen landscape</a>
             </figcaption>
         </figure>
         <figure class="projects__item">
-            <img src="build/static/images/projects/landscape/landscape2.gif" alt="Nunc sit amet massa id sem pretium luctus">
+            <img src="build/static/images/projects/landscape/landscape2.gif" alt="Compute shader and proc gen landscape">
             <figcaption>
-                <a class="icon icon_link" href="build/landscape.html" >Nunc sit amet massa id sem pretium luctus</a>
+                <a class="icon icon_link" href="build/landscape.html" >Compute shader and proc gen landscape</a>
             </figcaption>
         </figure>
         <figure class="projects__item">
-            <img src="build/static/images/projects/rain/rain1.gif" alt="Nunc elementum arcu sit amet erat sodales fringilla">
+            <img src="build/static/images/projects/rain/rain1.gif" alt="Weather shader for proc gen landscape">
             <figcaption>
-                <a class="icon icon_link" href="build/rain.html" >Nunc elementum arcu sit amet erat sodales fringilla</a>
+                <a class="icon icon_link" href="build/rain.html" >Weather shader for proc gen landscape</a>
             </figcaption>
         </figure>
         <figure class="projects__item">
-            <img src="build/static/images/projects/" alt="Cras condimentum venenatis aliquet">
+            <img src="build/static/images/projects/landscape/landscape1.gif" alt="Compute shader and proc gen landscape">
             <figcaption>
-                <a class="icon icon_link" href="#" >Cras condimentum venenatis aliquet</a>
+                <a class="icon icon_link" href="build/landscape.html" >Compute shader and proc gen landscape</a>
             </figcaption>
         </figure>
         
