formating, links updated,

--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
                         <blockquote>
                             Code talk;
                         </blockquote>
-                    </p> 
-                    <p>
-                        I have <span id="codeExp"> 4 </span> years of coding experiance, in lots of languages including; python, C#, C++ and YAML.
+                    <!-- </p> 
+                    <p> -->
+                        I have <span id="codeExp">4</span> years of coding experiance, in lots of languages including; python, C#, C++ and YAML.
                         Of all of these my favourite to prototype in is python because of the "code to test" speed, however I do not write programs
                         in python due to the poor performance and frequency of runtime/user caught errors. For these reasons I often recommend Lua.
                         I prefer to write programs in C# as it is (slightly) faster than java and offers a good comprimse between C++'s speed and 
@@ -125,7 +125,7 @@
     <section class="common-section" id="projects">
     <header class="common-section__header">
         <h2>Projects</h2>
-        <p>Donec lorem ante, efficitur ut blandit eu, sollicitudin sed mi</p>
+        <p>Technical art portfolio projects</p>
     </header>
     
         <div class="projects-wrap"><div class="grid-container"><div class="projects">
