Removed old placeholder

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <a class="second-nav__logo">
                 <span>OR</span>
             </a>
-            <nav class="menu"><ul><li><a class="js-link js-anchor is-selected" href="">Home</a></li>
+        <nav class="menu"><ul><li><a class="js-link js-anchor is-selected" href="">Home</a></li>
                 <li><a class="js-link js-anchor" href="#about">About</a></li>
         <!-- <li style="margin-left: 0px;"> --><li>
         <a class="js-link js-anchor is-selected" href="build/wip.html">Blog (wip)</a>
@@ -97,7 +97,7 @@
             <div class="about-card">
                 <header class="about-card__header">
                     <h2>About me</h2>
-                    <h4>ABOUT ME SUBHEADING </h4>
+                    <h4></h4> <!-- About me Subheading-->
                 </header>
                 <div class="about-card__info">
                     <p id="aboutMe"> 
